--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Client-side application to identify outliers from a Net Promoter Score (NPS) dataset.",
   "main": "nps-stats.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "start": "http-server"
   },
   "keywords": [
@@ -13,7 +13,8 @@
   "author": "Justin Cheng",
   "license": "MIT",
   "devDependencies": {
-    "http-server": "^0.9.0"
+    "http-server": "^0.9.0",
+    "mocha": "^3.2.0"
   },
   "dependencies": {
     "highcharts": "^5.0.6",
