--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "nps-stats.js",
   "scripts": {
     "test": "mocha",
-    "start": "http-server"
+    "build": "node_modules/.bin/webpack",
+    "start": "node_modules/.bin/webpack-dev-server"
   },
   "keywords": [
     "nps"
@@ -14,9 +15,12 @@
   "license": "MIT",
   "devDependencies": {
     "http-server": "^0.9.0",
-    "mocha": "^3.2.0"
+    "mocha": "^3.2.0",
+    "webpack": "^2.2.0-rc.7",
+    "webpack-dev-server": "^1.16.2"
   },
   "dependencies": {
+    "d3": "^4.4.3",
     "highcharts": "^5.0.6",
     "jquery": "^3.1.1",
     "papaparse": "^4.1.2",
